# minbo

./: .gitignore  Cargo.toml  README.md  flake.nix
config/: commands.toml
minmands/: Cargo.toml  README.md
minmands/src/: builder.rs  constructor.rs  lib.rs  macros.rs  tree.rs
src/: client.rs  config.rs  main.rs  secret.rs  token.rs  websocket.rs
src/app/: mod.rs
src/app/model/: mod.rs
src/app/render/: chat.rs  mod.rs
src/client/: mod.rs
src/client/token/: auth.rs  mod.rs
src/model/: action.rs  chat.rs  commands.rs  handle_event.rs  input.rs  mod.rs
src/model/commands/: action.rs  authority.rs  init.rs  mod.rs  parse.rs  tree.rs
src/util/: fs.rs  mod.rs  ttv.rs
