[package]
name = "minbo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
color-eyre = "0.6.2"
crossterm = "0.25" # Bound by `tui`
hyper = { version = "0.14.26", features = ["server", "http1", "tcp"] }
log = "0.4.17"
open = "4.1.0"
reqwest = "0.11.17"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
toml = "0.7.3"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tui = { version = "0.20.1", package = "ratatui" }
tui-logger = { version = "0.9.1", default-features = false, features = ["ratatui-support", "tracing-support"] }
twitch-irc = "5.0.0"
unicode-width = "0.1.10"

# Always compile dependencies with high optimizations
[profile.dev.package."*"]
opt-level = 3
